modules/gdscript/tests/scripts/parser/errors/duplicate_abstract_func.gd
extends RefCounted

abstract class A:
	abstract abstract func f()

func test():
	pass
